Bugzilla #1865, https://bugs.freedesktop.org/show_bug.cgi?id=1865 Added     X(NF)printf and X(NF)vprintf functions which allocate the buffer with     X(NF)alloc Bugzilla #1865, https://bugs.freedesktop.org/show_bug.cgi?id=1865 extend     snprintf to work on NULL.